--- a/template/category_list.phtml
+++ b/template/category_list.phtml
@@ -1,6 +1,6 @@
 <?php
 $categories_model = $this->getModel('categories');
-$categories = $categories_model->getAll();
+$categories = $categories_model->getAllAssoc();
 ?>
 <?php include_once('elements/header.phtml');?>
 <div class="container-fluid">
@@ -18,35 +18,50 @@ $categories = $categories_model->getAll();
                 </a>
             </div>
             <hr>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Kategorie</th>
-                        <th>Akcje</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php foreach($categories as $nr=>$category):?>
-                    <tr>
-                        <th scope="row"><?php echo $nr+1;?></th>
-                        <td><?php echo $category->getCategory();?></td>
-                        <td>
-                            <a href="?action=edit_category&id=<?php echo $category->getId();?>" data-toggle="tooltip" title="Edytuj" data-placement="left">
-                                <button type="button" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-pencil"></span>
-                                </button>
-                            </a>
-                            <a href="?action=delete_category&id=<?php echo $category->getId();?>" data-toggle="tooltip" title="Usuń" data-placement="right">
-                                <button type="button" class="btn btn-danger">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </a>
-                        </td>
-                    </tr>
-                    <?php endforeach;?>
-                </tbody>
-            </table>
+            
+            <div ng-app="categoryApp" ng-controller="categoryController">
+                <div class="form-group">
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchCategory" placeholder="Szukaj kategorii...">
+                    </div>
+                </div>
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th ng-click="orderByMe('category')" title="Sortuj kategorię">Kategorie</th>
+                            <th>Akcje</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="x in category_list | filter: {category: searchCategory} | orderBy: categoryOrderBy">
+                            <th>{{$index+1}}</th>
+                            <td>{{x.category}}</td>
+                            <td>
+                                <a href="?action=edit_category&id={{x.id}}" data-toggle="tooltip" title="Edytuj" data-placement="left">
+                                    <button type="button" class="btn btn-primary">
+                                        <span class="glyphicon glyphicon-pencil"></span>
+                                    </button>
+                                </a>
+                                <a href="?action=delete_category&id={{x.id}}" data-toggle="tooltip" title="Usuń" data-placement="right">
+                                    <button type="button" class="btn btn-danger">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <script>
+                var app = angular.module("categoryApp", []);
+                app.controller("categoryController", function($scope){
+                    $scope.category_list = <?php echo json_encode($categories);?>;
+                    $scope.orderByMe = function(x){
+                        $scope.categoryOrderBy = x;
+                    }
+                });
+            </script>
         </div>
     </div>
 </div>
