--- a/template/product_list.phtml
+++ b/template/product_list.phtml
@@ -35,46 +35,63 @@ if($this->category_name == 'all' || empty($this->category_name)){
                 <button type="button" class="btn btn-primary btn-lg dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Kategorie</button>
                 <div class="dropdown-menu">
                     <li class="dropdown"><a class="dropdown-item" href="?action=product_list&category_name=all">Wszystkie</a></li>
-                    <?php foreach($categories_model->getAll() as $category):?>
+                    <?php foreach($categories_model->getAllClass() as $category):?>
                     <li class="dropdown"><a class="dropdown-item" href="?action=product_list&category_name=<?php echo $category->getCategory();?>"><?php echo $category->getCategory();?></a></li>
                     <div class="dropdown-divider"></div>
                     <?php endforeach;?>
                 </div>
             </div>
             <hr>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nazwa Produktu</th>
-                        <th>Ilość</th>
-                        <th>Kategoria</th>
-                        <th>Akcje</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php foreach($products as $nr=>$product):?>
-                    <tr>
-                        <th scope="row"><?php echo $nr+1;?></th>
-                        <td><?php echo $product->getName();?></td>
-                        <td><?php echo $product->getQuantity();?></td>
-                        <td><?php echo $product->getCategory();?></td>
-                        <td>
-                            <a href="?action=edit_product&id=<?php echo $product->getId();?>" data-toggle="tooltip" title="Edytuj" data-placement="left">
-                                <button type="button" class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-pencil"></span>
-                                </button>
-                            </a>
-                            <a href="?action=delete_product&id=<?php echo $product->getId();?>" data-toggle="tooltip" title="Usuń" data-placement="right">
-                                <button type="button" class="btn btn-danger">
-                                    <span class="glyphicon glyphicon-trash"></span>
-                                </button>
-                            </a>
-                        </td>
-                    </tr>
-                    <?php endforeach;?>
-                </tbody>
-            </table>
+            <div ng-app="productApp" ng-controller="productController">
+                <div class="form-group">
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchProduct" placeholder="Szukaj nazwę produktu...">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchCategory" placeholder="Szukaj kategorii...">
+                    </div>
+                </div>
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th ng-click="orderByMe('name')" title="Sortuj nazwę produktu">Nazwa Produktu</th>
+                            <th>Ilość</th>
+                            <th ng-click="orderByMe('category')" title="Sortuj kategorię">Kategoria</th>
+                            <th>Akcje</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="x in product_list | filter: {name: searchProduct, category: searchCategory} | orderBy: productOrderBy">
+                            <th>{{$index+1}}</th>
+                            <td>{{x.name}}</td>
+                            <td>{{x.quantity}}</td>
+                            <td>{{x.category}}</td>
+                            <td>
+                                <a href="?action=edit_product&id={{x.id}}" data-toggle="tooltip" title="Edytuj" data-placement="left">
+                                    <button type="button" class="btn btn-primary">
+                                        <span class="glyphicon glyphicon-pencil"></span>
+                                    </button>
+                                </a>
+                                <a href="?action=delete_product&id={{x.id}}" data-toggle="tooltip" title="Usuń" data-placement="right">
+                                    <button type="button" class="btn btn-danger">
+                                        <span class="glyphicon glyphicon-trash"></span>
+                                    </button>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <script>
+                var app = angular.module("productApp", []);
+                app.controller("productController", function($scope){
+                    $scope.product_list = <?php echo json_encode($products);?>;
+                    $scope.orderByMe = function(x){
+                        $scope.productOrderBy = x;
+                    }
+                });
+            </script>
         </div>
     </div>
 </div>
