--- a/template/visit_list.phtml
+++ b/template/visit_list.phtml
@@ -2,7 +2,7 @@
 $visits_model = $this->getModel('visits');
 $visits = $visits_model->getAll();
 ?>
-<?php include_once('elements/header.phtml');?>
+<?php include_once ('elements/header.phtml');?>
 <div class="container-fluid">
     <div class="row content">
         <?php include_once('elements/menu.phtml');?>
@@ -18,47 +18,67 @@ $visits = $visits_model->getAll();
                 </a>
             </div>
             <hr>
-            <table class="table table-striped table-hover">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Imie</th>
-                        <th>Nazwisko</th>
-                        <th>Numer Telefonu</th>
-                        <th>Data Wizyty</th>
-                        <th>Godzina Wizyty</th>
-                        <th>Cena</th>
-                        <th>Notatka</th>
-                        <th>Akcje</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php foreach($visits as $nr=>$visit):?>
-                    <tr>
-                        <th scope="row"><?php echo $nr+1;?></th>
-                        <td><?php echo $visit->getFirstname();?></td>
-                        <td><?php echo $visit->getLastname();?></td>
-                        <td><?php echo $visit->getPhone();?></td>
-                        <td><?php echo $visit->getVdate();?></td>
-                        <td><?php echo $visit->getVtime();?></td>
-                        <td><?php echo $visit->getPrice();?></td>
-                        <td><?php echo $visit->getNote();?></td>
-                        <td>
-                            <a href="?action=edit_visit&id=<?php echo $visit->getId();?>" data-toggle="tooltip" title="Edytuj" data-placement="left">
+            <div ng-app="visitApp" ng-controller="visitController">
+                <div class="form-group">
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchFirstname" placeholder="Szukaj imię...">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchLastname" placeholder="Szukaj nazwisko...">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" class="form-control" ng-model="searchPhone" placeholder="Szukaj numer telefonu...">
+                    </div>
+                </div>
+                <table class="table table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th ng-click="orderByMe('firstname')" title="Sortuj imię">Imie</th>
+                            <th ng-click="orderByMe('lastname')" title="Sortuj nazwisko">Nazwisko</th>
+                            <th ng-click="orderByMe('phone')" title="Sortuj numer telefonu">Numer Telefonu</th>
+                            <th ng-click="orderByMe('vdate')" title="Sortuj data">Data Wizyty</th>
+                            <th ng-click="orderByMe('vtime')" title="Sortuj godzina">Godzina Wizyty</th>
+                            <th>Cena</th>
+                            <th>Notatka</th>
+                            <th>Akcje</th>
+                        </tr>
+                    </thead>
+                    <tbody>  
+                        <tr ng-repeat = "x in visit_list | filter: {firstname: searchFirstname, lastname: searchLastname, phone: searchPhone} | orderBy: visitOrderBy">
+                            <th>{{$index+1}}</th>
+                            <td>{{x.firstname}}</td>
+                            <td>{{x.lastname}}</td>
+                            <td>{{x.phone}}</td>
+                            <td>{{x.vdate}}</td>
+                            <td>{{x.vtime}}</td>
+                            <td>{{x.price}}</td>
+                            <td>{{x.note}}</td>
+                            <td>
+                            <a href="?action=edit_visit&id={{x.id}}" data-toggle="tooltip" title="Edytuj" data-placement="left">
                                 <button type="button" class="btn btn-primary">
                                     <span class="glyphicon glyphicon-pencil"></span>
                                 </button>
                             </a>
-                            <a href="?action=delete_visit&id=<?php echo $visit->getId();?>" data-toggle="toolip" title="Usuń" data-placement="right">
+                            <a href="?action=delete_visit&id={{x.id}}" data-toggle="toolip" title="Usuń" data-placement="right">
                                 <button type="button" class="btn btn-danger">
                                     <span class="glyphicon glyphicon-trash"></span>
                                 </button>
                             </a>
                         </td>
-                    </tr>
-                    <?php endforeach;?>
-                </tbody>
-            </table>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <script>
+                var app = angular.module("visitApp", []);
+                app.controller("visitController", function($scope){
+                    $scope.visit_list = <?php echo json_encode($visits);?>;
+                    $scope.orderByMe = function(x){
+                        $scope.visitOrderBy = x;
+                    }
+                }); 
+            </script>
         </div>
     </div>
 </div>
